# libOOC

./: Makefile  Makefile.am  Makefile.in  README.txt  config.h.in  configure  configure.ac  libooc.pro
autom4te.cache/: output.0  requests  traces.0  traces.1
include/: node.hxx
lib/: Makefile  Makefile.am  Makefile.in
lib/Node/: node.c
lib/Object/: Object.c
scripts/: Makefile.build
